// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmployeeDetailsModal > delete button > matches snapshot in confirmation state 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="employee-details-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal _detailsModal_6280d9"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="employee-details-title"
        >
          Employee Details
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <div
        class="_hero_6280d9"
      >
        <div
          class="_avatar_6280d9"
        >
          AJ
        </div>
        <div>
          <h3
            class="_name_6280d9"
          >
            Alice Johnson
          </h3>
          <p
            class="_jobTitle_6280d9"
          >
            Software Engineer
          </p>
          <span
            class="badge badge--full-time"
          >
            full-time
          </span>
        </div>
      </div>
      <dl
        class="_grid_6280d9"
      >
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Department
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            Engineering
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Country
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            USA
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Salary
          </dt>
          <dd
            class="_fieldValue_6280d9 _fieldValueSalary_6280d9"
          >
            $120,000
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Hire Date
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            March 15, 2021
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Employee ID
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            #42
          </dd>
        </div>
      </dl>
      <div
        class="modal__actions"
      >
        <p
          class="_confirmText_6280d9"
        >
          Delete Alice Johnson? This cannot be undone.
        </p>
        <button
          class="btn btn--danger"
          type="button"
        >
          Confirm Delete
        </button>
        <button
          class="btn btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeDetailsModal > snapshot > matches snapshot for a full-time employee 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="employee-details-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal _detailsModal_6280d9"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="employee-details-title"
        >
          Employee Details
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <div
        class="_hero_6280d9"
      >
        <div
          class="_avatar_6280d9"
        >
          AJ
        </div>
        <div>
          <h3
            class="_name_6280d9"
          >
            Alice Johnson
          </h3>
          <p
            class="_jobTitle_6280d9"
          >
            Software Engineer
          </p>
          <span
            class="badge badge--full-time"
          >
            full-time
          </span>
        </div>
      </div>
      <dl
        class="_grid_6280d9"
      >
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Department
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            Engineering
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Country
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            USA
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Salary
          </dt>
          <dd
            class="_fieldValue_6280d9 _fieldValueSalary_6280d9"
          >
            $120,000
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Hire Date
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            March 15, 2021
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Employee ID
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            #42
          </dd>
        </div>
      </dl>
      <div
        class="modal__actions"
      >
        <button
          class="btn btn--primary"
          type="button"
        >
          Edit Employee
        </button>
        <button
          class="btn btn--danger"
          type="button"
        >
          Delete Employee
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeDetailsModal > snapshot > matches snapshot when department is null 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="employee-details-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal _detailsModal_6280d9"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="employee-details-title"
        >
          Employee Details
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <div
        class="_hero_6280d9"
      >
        <div
          class="_avatar_6280d9"
        >
          AJ
        </div>
        <div>
          <h3
            class="_name_6280d9"
          >
            Alice Johnson
          </h3>
          <p
            class="_jobTitle_6280d9"
          >
            Software Engineer
          </p>
          <span
            class="badge badge--full-time"
          >
            full-time
          </span>
        </div>
      </div>
      <dl
        class="_grid_6280d9"
      >
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Department
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            —
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Country
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            USA
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Salary
          </dt>
          <dd
            class="_fieldValue_6280d9 _fieldValueSalary_6280d9"
          >
            $120,000
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Hire Date
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            March 15, 2021
          </dd>
        </div>
        <div
          class="_field_6280d9"
        >
          <dt
            class="_fieldLabel_6280d9"
          >
            Employee ID
          </dt>
          <dd
            class="_fieldValue_6280d9"
          >
            #42
          </dd>
        </div>
      </dl>
      <div
        class="modal__actions"
      >
        <button
          class="btn btn--primary"
          type="button"
        >
          Edit Employee
        </button>
        <button
          class="btn btn--danger"
          type="button"
        >
          Delete Employee
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
